--- a/svn/weixin/html/SetMealChange/index.html
+++ b/svn/weixin/html/SetMealChange/index.html
@@ -6,30 +6,30 @@
     <meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1">
     <title>Document</title>
     <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
-    <link rel="stylesheet" type="text/css" href="http://www.jq22.com/jquery/bootstrap-3.3.4.css">
-    <link rel="stylesheet" href="css/mpicker.css">
+    <link rel="stylesheet" type="text/css" href="../../dist/libs/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../dist/plugs/mobileSelector/css/mpicker.css">
     <style type="text/css">
     /*自定义样式*/
-    body,html{
+    /*body,html{
         margin: 0;
         padding: 0;
     }
     html{
         font-size:10px;
-    }
-    body {
+    }*/
+    /*body {
         font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
         font-size: 14px;
         line-height: 1.42857143;
         color: #333;
         background-color: #fff;
-    }
+    }*/
     
-    .slide-wapper {
+    /*.slide-wapper {
         padding:20px;
         overflow-y: scroll;
-         /* background: #eee; */
-    }
+         /* background: #eee; 
+    }*/
 
     </style>
 </head>
@@ -97,10 +97,10 @@ $('.select-value1').mPicker({
 
         </div>
     </div>
-    <script src="http://www.jq22.com/jquery/jquery-1.10.2.js"></script>
-    <script src="js/json.js"></script>
-    <script src="js/jsonExchange.js"></script>
-    <script src="js/mPicker.js"></script>
+    <script src="../../dist/libs/jquery-2.1.4/jquery.min.js"></script>
+    <script src="../../dist/plugs/mobileSelector/js/json.js"></script>
+    <script src="../../dist/plugs/mobileSelector/js/jsonExchange.js"></script>
+    <script src="../../dist/plugs/mobileSelector/js/mPicker.min.js"></script>
     <script chartset="UTF-8">
     $(function() {
         
