--- a/svn/weixin/html/myCard/mycard1.html
+++ b/svn/weixin/html/myCard/mycard1.html
@@ -48,7 +48,7 @@
 		</section>
 		 <div class="dataoperation">
 				<ul>
-					<li> <a href="../myDevice/flowUsage.html"><span class="icon icon-flow"></span>流量使用明细<i class="layui-icon">&#xe602;</i></a> </li>
+					<a href="../myDevice/flowUsage.html"><li> <span class="icon icon-flow"></span>流量使用明细<i class="layui-icon">&#xe602;</i> </li></a>
 					
 					
 					<li><a> <span class="icon icon-Fangyuan"></span>停复机<i class="layui-icon">&#xe602;</i></a></li>
