--- a/svn/weixin/html/personalCenter.html
+++ b/svn/weixin/html/personalCenter.html
@@ -12,7 +12,11 @@
 		<link rel="stylesheet" type="text/css" href="../css/layout.css"/>
 		
 	</head>
-	
+	<style type="text/css">
+		a:active{
+			text-decoration: none;
+		}
+	</style>
 	<body>
 		<nav class="nav_center">
 			<div class="headPortrait">
@@ -32,22 +36,59 @@
 			</div>
 		</nav>
 		<section class="section_content">
-			<a href="../html/myCard/mycard1.html"><div class="centerContent"><span class="icon icon-left  icon-personalhead"></span><span class="titleText">我的卡片</span><span class="icon floatright icon-jiantouToright"></span></div></a>
-			<a href="../html/myDevice/cloudCenter.html"><div class="centerContent"><span class="icon icon-left icon-device"></span><span class="titleText">我的设备</span><span class="icon floatright icon-jiantouToright"></span></div></a>
-			<a href="../html/personalCenter/rechargeRecord.html"><div class="centerContent"><span class="icon icon-left icon-charge"></span><span class="titleText">充值记录</span><span class="icon floatright icon-jiantouToright"></span></div></a>
-			<a href="../html/personalCenter/flowrefund.html"><div class="centerContent"><span class="icon icon-left icon-charge"></span><span class="titleText">流量退费</span><span class="icon floatright icon-jiantouToright"></span></div></a>
-			<a href="../html/personalCenter/myOrder.html"><div class="centerContent"><span class="icon icon-left icon-orderList"></span><span class="titleText">我的订单</span><span class="icon floatright icon-jiantouToright"></span></div></a>
-			<a href="../html/personalCenter/address.html"><div class="centerContent"><span class="icon icon-left icon-address"></span><span class="titleText">收货地址</span><span class="icon floatright icon-jiantouToright"></span></div></a>
-			<a href="../html/SetMealChange/Modifiable.html"><div class="centerContent"><span class="icon icon-left icon-xiugai"></span><span class="titleText">套餐变更</span><span class="icon floatright icon-jiantouToright"></span></div></a>
-			<a href="../html/personalCenter/auditNotPass.html"><div class="centerContent"><span class="icon icon-left icon-audit"></span><span class="titleText">实名进度</span><span class="icon floatright icon-jiantouToright"></span></div></a>
-			<a href="../html/personalCenter/failureReporting.html"><div class="centerContent"><span class="icon icon-left icon-guzhang"></span><span class="titleText" >故障报修进度</span><span  class="icon floatright icon-jiantouToright"></span></div></a>
-			<a href="../html/personalCenter/cancellation.html"><span class="icon icon-left icon-zhuxiao"></span><span class="titleText">实名注销</span><span class="icon floatright icon-jiantouToright"></span></div></a>
-			<a href="../html/personalCenter/helpcenter.html"><div class="centerContent"><div class="centerContent"><span class="icon icon-left icon-helpCenter"></span><span class="titleText">帮助中心</span><span class="icon floatright icon-jiantouToright"></span></div></a>
-			<a href="../html/personalCenter/contactInformation.html"><div class="centerContent"><span class="icon icon-left icon-ContactUs"></span><span class="titleText">联系我们</span><span class="icon floatright icon-jiantouToright"></span></div></a>
-			<a href="../html/personalCenter/fi"><div class="centerContent"><span class="icon icon-left icon-edit"></span><span class="titleText">修改资料</span><span class="icon floatright icon-jiantouToright"></span></div></a>
-			<a href="../html/QRcode/QRcode.html"><div class="centerContent"><span class="icon icon-left icon-scanning "></span><span class="titleText">查看二维码</span><span class="icon floatright icon-jiantouToright"></span></div></a>
-			<a href="../html/QRcode/NotLoggedIn.html" id="logout"><div class="centerContent"><span class="icon icon-exit"></span><span class="titleText">退出账号</span><span class="icon floatright icon-jiantouToright"></span></div></a>
-			
+		<a href="../html/myCard/mycard1.html">
+	<div class="centerContent"><span class="icon icon-left  icon-personalhead"></span><span class="titleText">我的卡片</span><span class="icon floatright icon-jiantouToright"></span></div>
+</a>
+<a href="../html/myDevice/cloudCenter.html">
+	<div class="centerContent"><span class="icon icon-left icon-device"></span><span class="titleText">我的设备</span><span class="icon floatright icon-jiantouToright"></span></div>
+</a>
+<a href="../html/myDevice/rechargePayment.html">
+	<div class="centerContent"><span class="icon icon-left icon-charge"></span><span class="titleText">充值缴费</span><span class="icon floatright icon-jiantouToright"></span></div>
+</a>
+<a href="../html/personalCenter/rechargeRecord.html">
+	<div class="centerContent"><span class="icon icon-left icon-charge"></span><span class="titleText">充值记录</span><span class="icon floatright icon-jiantouToright"></span></div>
+</a>
+<a href="../html/personalCenter/flowrefund.html">
+	<div class="centerContent"><span class="icon icon-left icon-charge"></span><span class="titleText">流量退费</span><span class="icon floatright icon-jiantouToright"></span></div>
+</a>
+<a href="../html/personalCenter/orderList.html">
+	<div class="centerContent"><span class="icon icon-left icon-orderList"></span><span class="titleText">我的订单</span><span class="icon floatright icon-jiantouToright"></span></div>
+</a>
+<a href="../html/personalCenter/address.html">
+	<div class="centerContent"><span class="icon icon-left icon-address"></span><span class="titleText">收货地址</span><span class="icon floatright icon-jiantouToright"></span></div>
+</a>
+<a href="../html/SetMealChange/Modifiable.html">
+	<div class="centerContent"><span class="icon icon-left icon-xiugai"></span><span class="titleText">套餐变更</span><span class="icon floatright icon-jiantouToright"></span></div>
+</a>
+<a href="../html/personalCenter/auditNotPass.html">
+	<div class="centerContent"><span class="icon icon-left icon-audit"></span><span class="titleText">实名进度</span><span class="icon floatright icon-jiantouToright"></span></div>
+</a>
+<a href="../html/personalCenter/failureReporting.html">
+	<div class="centerContent"><span class="icon icon-left icon-guzhang"></span><span class="titleText">故障报修进度</span><span class="icon floatright icon-jiantouToright"></span></div>
+</a>
+<a href="../html/personalCenter/cancellation.html">
+	<div class="centerContent"> 
+		<span class="icon icon-left icon-zhuxiao"></span>
+		<span class="titleText">实名注销</span>
+		<span class="icon floatright icon-jiantouToright"></span>
+	</div>
+</a>
+<a href="../html/personalCenter/helpcenter.html">
+	
+		<div class="centerContent"><span class="icon icon-left icon-helpCenter"></span><span class="titleText">帮助中心</span><span class="icon floatright icon-jiantouToright"></span></div>
+</a>
+<a href="../html/personalCenter/contactInformation.html">
+	<div class="centerContent"><span class="icon icon-left icon-ContactUs"></span><span class="titleText">联系我们</span><span class="icon floatright icon-jiantouToright"></span></div>
+</a>
+<a href="../html/personalCenter/personalData.html">
+	<div class="centerContent"><span class="icon icon-left icon-edit"></span><span class="titleText">修改资料</span><span class="icon floatright icon-jiantouToright"></span></div>
+</a>
+<a href="../html/QRcode/QRcode.html">
+	<div class="centerContent"><span class="icon icon-left icon-scanning "></span><span class="titleText">查看二维码</span><span class="icon floatright icon-jiantouToright"></span></div>
+</a>
+<a href="../html/QRcode/NotLoggedIn.html" id="logout">
+	<div class="centerContent"><span class="icon icon-exit"></span><span class="titleText">退出账号</span><span class="icon floatright icon-jiantouToright"></span></div>
+</a>
 		</section>
 		<footer></footer>
 	</body>
