--- a/svn/weixin/html/personalCenter/rechargeRecord.html
+++ b/svn/weixin/html/personalCenter/rechargeRecord.html
@@ -2,7 +2,7 @@
 <html >
 	<head>
 		<meta charset="UTF-8">
-		<title></title>
+		<title>充值记录</title>
 		
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link rel="stylesheet" href="../../icons/style.css" />
